стилизовала ползунок слайдера через js

--- a/toxin/src/blocks/form-elements/slider/slider.scss
+++ b/toxin/src/blocks/form-elements/slider/slider.scss
@@ -41,3 +41,34 @@
     border: 0;
     outline: none;
 }
+
+// стилизация ползунков
+.left-toddler{
+    top: 28px !important;
+    width: 16px !important;
+    height: 16px !important;
+    background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%) !important;
+    border: 2px solid #FFFFFF !important;
+    border-radius: 10px !important;
+}
+
+.right-toddler{
+    top: 28px !important;
+    width: 16px !important;
+    height: 16px !important;
+    background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%) !important;
+    border: 2px solid #FFFFFF !important;
+    border-radius: 10px !important;
+}
+
+.toddler{
+    background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+    border-radius: 3px;
+}
+
+.line-all{
+    background: #FFFFFF !important;
+    border: 1px solid rgba(31, 32, 65, 0.25) !important;
+    box-sizing: border-box !important;
+    border-radius: 3px !important;
+}
