сделаны стилизация range slider,  buttons, pagination

--- a/toxin/src/blocks/form-elements/slider/slider.scss
+++ b/toxin/src/blocks/form-elements/slider/slider.scss
@@ -28,13 +28,12 @@
     height: 80px;
 }
 
-.irs-from{
-    visibility: hidden;
-}
+// .irs-from{
+//     visibility: hidden;
+// }
 
 .extra-controls{
-    display: flex;
-    flex-direction: column;
+    display: inline;
 }
 
 .extra-controls__title{
