--- a/toxin/src/pages/form-elements/form-elements.pug
+++ b/toxin/src/pages/form-elements/form-elements.pug
@@ -1,4 +1,5 @@
 extends ../../base
+include ../../blocks/form-elements/dropdown/dropdown
 
 block title
     | Form Elements
@@ -35,25 +36,19 @@ block form-section
 
                             div(class="dropdown__menu")
                                 div(class="dropdown__menu-option" data-id="item-adult")
-                                    div(class="dropdown__item") Взрослые
+                                    +dropdownMenuOption('Взрослые')
                                     div(class="dropdown__controls")
-                                        div(class="dropdown__minus") -
-                                        div(class="dropdown__count") 0
-                                        div(class="dropdown__plus") +
+                                        +dropdownControls('-', 0, '+')
 
                                 div(class="dropdown__menu-option" data-id="item-children")
-                                    div(class="dropdown__item") Дети
+                                    +dropdownMenuOption('Дети')
                                     div(class="dropdown__controls")
-                                        div(class="dropdown__minus") -
-                                        div(class="dropdown__count") 0
-                                        div(class="dropdown__plus") +
+                                        +dropdownControls('-', 0, '+')
 
                                 div(class="dropdown__menu-option" data-id="item-babies")
-                                    div(class="dropdown__item") Младенцы
+                                    +dropdownMenuOption('Младенцы')
                                     div(class="dropdown__controls")
-                                        div(class="dropdown__minus") -
-                                        div(class="dropdown__count") 0
-                                        div(class="dropdown__plus") +
+                                        +dropdownControls('-', 0, '+')
 
                                 div(class="dropdown__buttons" data-id="item-btn")
                                     button(class="clear-btn") Очистить
@@ -189,6 +184,55 @@ block form-section
                                 i(class="rating__icon") star
                                 i(class="rating__icon") star
                                 i(class="rating__icon") star
+
+                .form-elements-item
+                    .form-elements__dropdown
+                        form(action="")
+                            .form-elements__descr
+                                span dropdown
+                            .form-elements__input--dropdown
+                                input(class="text-field--dropdown" placeholder="Сколько гостей" readonly="readonly")
+                                i(class="material-icons") expand_more
+
+                            div(class="dropdown__menu")
+                                div(class="dropdown__menu-option")
+                                    +dropdownMenuOption('Взрослые')
+                                    div(class="dropdown__controls")
+                                        +dropdownControls('-', 0, '+')
+
+                                div(class="dropdown__menu-option")
+                                    +dropdownMenuOption('Дети')
+                                    div(class="dropdown__controls")
+                                        +dropdownControls('-', 0, '+')
+
+                                div(class="dropdown__menu-option")
+                                    +dropdownMenuOption('Младенцы')
+                                    div(class="dropdown__controls")
+                                        +dropdownControls('-', 0, '+')
+
+                                div(class="dropdown__buttons")
+                                    button(class="clear-btn") Очистить
+                                    button(class="apply-btn") Применить
+
+                .form-elements-item
+                    .form-elements__descr
+                        span Rich Checkbox Buttons
+                    .form-elements__rich-checkbox
+                        div(class="rich-checkbox__wrapper")
+                            div(class="checkbox__marks")
+                                i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-hall")
+                            label(class="rich-checkbox rich-checkbox__title" for="checkbox-hall") Широкий коридор
+                                input(class="rich-checkbox__input" type="checkbox" id="checkbox-hall" data-type="hall")
+                                div(class="rich-checkbox__descr") Ширина коридоров в номере не менее 91 см.
+
+                        div(class="rich-checkbox__wrapper")
+                            div(class="checkbox__marks")
+                                i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-specialist")
+                            label(class="rich-checkbox rich-checkbox__title" for="checkbox-specialist") Помощник для инвалидов
+                                input(class="rich-checkbox__input" type="checkbox" id="checkbox-specialist" data-type="specialist")
+                                div(class="rich-checkbox__descr") На 1 этаже вас встретит специалист и проводит до номера.
+
+
 
                 <!-- здесь нужно будет продолжить среднюю часть верстки -->
 
