--- a/toxin/src/pages/form-elements/form-elements.pug
+++ b/toxin/src/pages/form-elements/form-elements.pug
@@ -98,8 +98,145 @@ block form-section
                                     input(class="text-field--email" type="text" placeholder="Email")
                                     i(class="material-icons--email subscription__button") arrow_forward
 
+                .form-elements-item
+                    .form-elements__dropdown
+                        form(action="")
+                            .form-elements__descr
+                                span dropdown
+                            .form-elements__input--dropdown
+                                input(class="text-field--dropdown" placeholder="2 спальни, 2 кровати" readonly="readonly")
+                                i(class="material-icons") expand_more
 
-            <!-- здесь нужно будет продолжить левую часть верстки -->
+                            div(class="dropdown__menu")
+                                div(class="dropdown__menu-option")
+                                    +dropdownMenuOption('Спальни')
+                                    div(class="dropdown__controls")
+                                        +dropdownControls('-', 0, '+')
+
+                                div(class="dropdown__menu-option")
+                                    +dropdownMenuOption('Кровати')
+                                    div(class="dropdown__controls")
+                                        +dropdownControls('-', 0, '+')
+
+                                div(class="dropdown__menu-option")
+                                    +dropdownMenuOption('Ванные комнаты')
+                                    div(class="dropdown__controls")
+                                        +dropdownControls('-', 0, '+')
+
+                                div(class="dropdown__buttons")
+                                    button(class="clear-btn") Очистить
+                                    button(class="apply-btn") Применить
+
+                .form-elements-item
+                    .form-elements__dropdown
+                        form(action="")
+                            .form-elements__descr
+                                span dropdown
+                            .form-elements__input--dropdown
+                                input(class="text-field--dropdown" placeholder="2 спальни, 2 кровати" readonly="readonly")
+                                i(class="material-icons") expand_more
+
+                            div(class="dropdown__menu")
+                                div(class="dropdown__menu-option")
+                                    +dropdownMenuOption('Спальни')
+                                    div(class="dropdown__controls")
+                                        +dropdownControls('-', 0, '+')
+
+                                div(class="dropdown__menu-option")
+                                    +dropdownMenuOption('Кровати')
+                                    div(class="dropdown__controls")
+                                        +dropdownControls('-', 0, '+')
+
+                                div(class="dropdown__menu-option")
+                                    +dropdownMenuOption('Ванные комнаты')
+                                    div(class="dropdown__controls")
+                                        +dropdownControls('-', 0, '+')
+
+                                div(class="dropdown__buttons")
+                                    button(class="clear-btn") Очистить
+                                    button(class="apply-btn") Применить
+
+                .form-elements-item
+                    .form-elements__expander
+                        form(action="")
+                            div(class="expander")
+                                div(class="expander__header js-expander") Expandable checkbox list
+                                div(class="expander__list expander__list_hided")
+                                    div(class="expander__wrapper")
+                                        div(class="checkbox__marks")
+                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-breakfast")
+                                        div(class="expander__checkbox")
+                                            label(class="checkbox" for="checkbox-breakfast") Завтрак
+                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-breakfast" data-type="expander-breakfast")
+                                                div(class="checkbox__mark")
+
+                            div(class="expander")
+                                div(class="expander__header js-expander") Expandable checkbox list
+                                div(class="expander__list expander__list_hided")
+                                    div(class="expander__wrapper")
+                                        div(class="checkbox__marks")
+                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-breakfast--open")
+                                        div(class="expander__checkbox")
+                                            label(class="checkbox" for="checkbox-breakfast--open") Завтрак
+                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-breakfast--open" data-type="expander-breakfast--open")
+                                                div(class="checkbox__mark")
+
+                                    div(class="expander__wrapper")
+                                        div(class="checkbox__marks")
+                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-desk")
+                                        div(class="expander__checkbox")
+                                            label(class="checkbox" for="checkbox-desk") Письменный стол
+                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-desk" data-type="expander-desk")
+                                                div(class="checkbox__mark")
+
+                                    div(class="expander__wrapper")
+                                        div(class="checkbox__marks")
+                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-feeding-chair")
+                                        div(class="expander__checkbox")
+                                            label(class="checkbox" for="checkbox-feeding-chair") Стул для кормления
+                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-feeding-chair" data-type="expander-feeding-chair")
+                                                div(class="checkbox__mark")
+
+                                    div(class="expander__wrapper")
+                                        div(class="checkbox__marks")
+                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-cot")
+                                        div(class="expander__checkbox")
+                                            label(class="checkbox" for="checkbox-cot") Кроватка
+                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-cot" data-type="expander-cot")
+                                                div(class="checkbox__mark")
+
+                                    div(class="expander__wrapper")
+                                        div(class="checkbox__marks")
+                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-tv")
+                                        div(class="expander__checkbox")
+                                            label(class="checkbox" for="checkbox-tv") Телевизор
+                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-tv" data-type="expander-tv")
+                                                div(class="checkbox__mark")
+
+                                    div(class="expander__wrapper")
+                                        div(class="checkbox__marks")
+                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-shampoo")
+                                        div(class="expander__checkbox")
+                                            label(class="checkbox" for="checkbox-shampoo") Шампунь
+                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-shampoo" data-type="expander-shampoo")
+                                                div(class="checkbox__mark")
+
+
+                .form-elements-item
+                    .form-elements__additions
+                        div(class="additions__wrapper")
+                            div(class="icon__wrap")
+                                i(class="additions__icon material-icons") tag_faces
+                            div(class="additions")
+                                div(class="additions__title") Комфорт
+                                div(class="additions__descr") Шумопоглощающие стены
+
+                        div(class="additions__wrapper")
+                            div(class="icon__wrap")
+                                i(class="additions__icon material-icons") location_city
+                            div(class="additions")
+                                div(class="additions__title") Удобство
+                                div(class="additions__descr") Окно в каждой из спален
 
             .form-elements.form-elements--middle
                 .form-elements-item
@@ -326,3 +463,16 @@ block form-section
                                 li(class="bullet__elem")
                                     span(class="bullet__item") Время прибытия — после 13:00, а выезд до 12:00
 
+            .form-elements.form-elements--bottom
+                .form-elements-item
+                    .form-elements__feedback
+                        article(class="feedback")
+                            div(class="feedback__avatar-wrapper")
+                                img(class="feedback__avatar" src="assets/images/ava.jpg" alt="user avatar")
+                            div(class="feedback__author-wrapper")
+                                div(class="feedback__author") Мурад Сарафанов
+                                div(class="feedback__date") 5 дней назад
+                            div(class="feedback__like")
+                                div(class="like like_liked") 12
+                                    i(class="like__icon like__icon_liked") favorite
+                            div(class="feedback__text") Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.
