начата верстка Cards

--- a/toxin/src/pages/form-elements/form-elements.pug
+++ b/toxin/src/pages/form-elements/form-elements.pug
@@ -463,16 +463,18 @@ block form-section
                                 li(class="bullet__elem")
                                     span(class="bullet__item") Время прибытия — после 13:00, а выезд до 12:00
 
-            .form-elements.form-elements--bottom
+            .form-elements--bottom
                 .form-elements-item
                     .form-elements__feedback
                         article(class="feedback")
-                            div(class="feedback__avatar-wrapper")
-                                img(class="feedback__avatar" src="assets/images/ava.jpg" alt="user avatar")
-                            div(class="feedback__author-wrapper")
-                                div(class="feedback__author") Мурад Сарафанов
-                                div(class="feedback__date") 5 дней назад
-                            div(class="feedback__like")
-                                div(class="like like_liked") 12
-                                    i(class="like__icon like__icon_liked") favorite
-                            div(class="feedback__text") Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.
+                            div(class="feedback__wrapper")
+                                div(class="feedback__avatar-wrapper")
+                                    img(class="feedback__avatar" src="assets/images/avatar.jpg" alt="user avatar")
+                                div(class="feedback__author-wrapper")
+                                    div(class="feedback__author") Мурад Сарафанов
+                                    div(class="feedback__date") 5 дней назад
+                            div(class="feedback__wrapper")
+                                div(class="feedback__like")
+                                    div(class="like like_liked") 12
+                                        i(class="like__icon like__icon_liked") favorite
+                                div(class="feedback__text") Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.
