--- a/toxin/src/blocks/form-elements/feedback/feedback.scss
+++ b/toxin/src/blocks/form-elements/feedback/feedback.scss
@@ -4,6 +4,10 @@
     left: 515px;
 }
 
+.feedback__avatar-wrapper{
+    margin: 0 10px 12px 0;
+}
+
 .feedback__avatar{
     width: 48px;
     height: 48px;
@@ -12,10 +16,18 @@
     box-shadow: 0px 10px 20px rgba(31,32,65,0.1);
 }
 
+.feedback__author-wrapper{
+    margin-top: 4px;
+}
+
 .feedback__author {
     padding-top: 0.143em;
     font-family: Montserrat, OpenSans, sans-serif;
     font-weight: bold;
+}
+
+.feedback__like{
+    margin-right: 8px;
 }
 
 .like_liked {
@@ -62,3 +74,11 @@
     color: rgba(31, 32, 65, 0.75);
 }
 
+.feedback__wrapper{
+    display: flex;
+}
+
+.form-elements--bottom{
+    max-width: 709px;
+    width: 100%;
+}
