--- a/toxin/src/blocks/form-elements/text-field/text-field.pug
+++ b/toxin/src/blocks/form-elements/text-field/text-field.pug
@@ -3,8 +3,12 @@ mixin textField(text, forInput)
         label(for="text-field-" + forInput) #{text}
 
 mixin inputField(modificator, inputFieldClassName, idInput, inputType, email)
-    div(class="form-elements__input"+ modificator)
-        input(class= '' + inputFieldClassName, id= 'text-field-' + idInput, placeholder= email, type= inputType)
+    if modificator
+        div(class="form-elements__input"+ modificator)
+            input(type= inputType, class= '' + inputFieldClassName, placeholder= email)
+    else
+        div(class="form-elements__input")
+            input(type= inputType, class= '' + inputFieldClassName, id= 'text-field-' + idInput, placeholder= email)
 
 mixin formElementsHeader(descr)
     .form-elements__descr
@@ -13,5 +17,4 @@ mixin formElementsHeader(descr)
 //- mixin widgetsInfo(widget, widgetTitle, descr, widgetDescr)
 //-     .widget.widget-items(class= 'widget-title--' + widget)= widgetTitle
 //-     .widget-item(class= 'widget-descr--' + descr)= widgetDescr
-
-//- доделать миксин с инпутом, там неверное id подставляется в инпутах, где нет id
+//-если есть модификатор у класса, то НЕ добавлять этому инпуту idInput
