--- a/toxin/src/pages/form-elements/form-elements.pug
+++ b/toxin/src/pages/form-elements/form-elements.pug
@@ -1,6 +1,12 @@
 extends ../../base
 include ../../blocks/form-elements/dropdown/dropdown
 include ../../blocks/form-elements/text-field/text-field
+include ../../blocks/form-elements/expander/expander
+include ../../blocks/form-elements/additions/additions
+include ../../blocks/form-elements/checkbox/checkbox
+include ../../blocks/form-elements/radio-btn/radio-btn
+include ../../blocks/form-elements/toggle/toggle
+include ../../blocks/form-elements/rate-btn/rate-btn
 
 block title
     | Form Elements
@@ -56,41 +62,35 @@ block form-section
                         form(action="")
                             +formElementsHeader('masked text field')
                             +inputField('--masked', 'text-field', '', 'text', 'ДД.ММ.ГГГГ')
-                            //- .form-elements__input--masked
-                            //-     input(class="text-field" type="text" placeholder="ДД.ММ.ГГГГ")
 
                 .form-elements-item
                     .form-elements__datepicker
                         .datepicker-wrapper
-                            .form-elements__descr
-                                span  date Dropdown
+                            +formElementsHeader('date Dropdown')
                             .form-elements__input--datepicker
-                                .datepicker--left#datepicker--left
+                                .datepicker--left
                                     input(class="text-field--datepicker text-field-datepicker--left" placeholder="ДД.ММ.ГГГГ" type="text" name="start" id="startDate" readonly)
                                     i(class="material-icons--left-datepicker") expand_more
 
                         .datepicker-wrapper--right
-                            .form-elements__descr
-                                span  date Dropdown
+                            +formElementsHeader('date Dropdown')
                             .form-elements__input--datepicker
-                                .datepicker--right#datepicker--right
+                                .datepicker--right
                                     input(class="text-field--datepicker text-field-datepicker--right" placeholder="ДД.ММ.ГГГГ" type="text" name="end" id="endDate" readonly)
                                     i(class="material-icons--left-datepicker") expand_more
 
                 .form-elements-item
                     .form-elements__filter-date-wrapper
                         form(action="")
-                            .form-elements__descr
-                                span  filter date dropdown
+                            +formElementsHeader('filter date dropdown')
                             .form-elements__filter-date
-                                input(class="text-field--filter datepicker-here" data-range="true" data-multiple-dates-separator=" - " type="text" placeholder="ДД.ММ.ГГГГ")    
+                                input(class="text-field--filter datepicker-here" data-range="true" data-multiple-dates-separator=" - " type="text" placeholder="ДД.ММ.ГГГГ")
                                 i(class="material-icons--filter") expand_more
 
                 .form-elements-item
                     .form-elements__email-wrapper
                         form(action="" method="get")
-                            .form-elements__descr
-                                span  subscription text field
+                            +formElementsHeader('subscription text field')
                             .form-elements__email-field
                                     input(class="text-field--email" type="text" placeholder="Email")
                                     i(class="material-icons--email subscription__button") arrow_forward
@@ -98,8 +98,7 @@ block form-section
                 .form-elements-item
                     .form-elements__dropdown
                         form(action="")
-                            .form-elements__descr
-                                span dropdown
+                            +formElementsHeader('dropdown')
                             .form-elements__input--dropdown
                                 input(class="text-field--dropdown" placeholder="2 спальни, 2 кровати" readonly="readonly")
                                 i(class="material-icons") expand_more
@@ -127,8 +126,7 @@ block form-section
                 .form-elements-item
                     .form-elements__dropdown
                         form(action="")
-                            .form-elements__descr
-                                span dropdown
+                            +formElementsHeader('dropdown')
                             .form-elements__input--dropdown
                                 input(class="text-field--dropdown" placeholder="2 спальни, 2 кровати" readonly="readonly")
                                 i(class="material-icons") expand_more
@@ -170,130 +168,45 @@ block form-section
                             div(class="expander")
                                 div(class="expander__header js-expander") Expandable checkbox list
                                 div(class="expander__list expander__list_hided")
-                                    div(class="expander__wrapper")
-                                        div(class="checkbox__marks")
-                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-breakfast--open")
-                                        div(class="expander__checkbox")
-                                            label(class="checkbox" for="checkbox-breakfast--open") Завтрак
-                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-breakfast--open" data-type="expander-breakfast--open")
-                                                div(class="checkbox__mark")
-
-                                    div(class="expander__wrapper")
-                                        div(class="checkbox__marks")
-                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-desk")
-                                        div(class="expander__checkbox")
-                                            label(class="checkbox" for="checkbox-desk") Письменный стол
-                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-desk" data-type="expander-desk")
-                                                div(class="checkbox__mark")
-
-                                    div(class="expander__wrapper")
-                                        div(class="checkbox__marks")
-                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-feeding-chair")
-                                        div(class="expander__checkbox")
-                                            label(class="checkbox" for="checkbox-feeding-chair") Стул для кормления
-                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-feeding-chair" data-type="expander-feeding-chair")
-                                                div(class="checkbox__mark")
-
-                                    div(class="expander__wrapper")
-                                        div(class="checkbox__marks")
-                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-cot")
-                                        div(class="expander__checkbox")
-                                            label(class="checkbox" for="checkbox-cot") Кроватка
-                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-cot" data-type="expander-cot")
-                                                div(class="checkbox__mark")
-
-                                    div(class="expander__wrapper")
-                                        div(class="checkbox__marks")
-                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-tv")
-                                        div(class="expander__checkbox")
-                                            label(class="checkbox" for="checkbox-tv") Телевизор
-                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-tv" data-type="expander-tv")
-                                                div(class="checkbox__mark")
-
-                                    div(class="expander__wrapper")
-                                        div(class="checkbox__marks")
-                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-shampoo")
-                                        div(class="expander__checkbox")
-                                            label(class="checkbox" for="checkbox-shampoo") Шампунь
-                                                input(class="checkbox__input" type="checkbox" checked="" id="checkbox-shampoo" data-type="expander-shampoo")
-                                                div(class="checkbox__mark")
-
+                                    +expander('mark-breakfast--open', 'Завтрак', 'checkbox-breakfast--open', 'expander-breakfast--open')
+                                    +expander('mark-desk', 'Письменный стол', 'checkbox-desk', 'expander-desk')
+                                    +expander('mark-feeding-chair', 'Стул для кормления', 'checkbox-feeding-chair', 'expander-feeding-chair')
+                                    +expander('mark-cot', 'Кроватка', 'checkbox-cot', 'expander-cot')
+                                    +expander('mark-tv', 'Телевизор', 'checkbox-tv', 'expander-tv')
+                                    +expander('mark-shampoo', 'Шампунь', 'checkbox-shampoo', 'expander-shampoo')
 
                 .form-elements-item
                     .form-elements__additions
-                        div(class="additions__wrapper")
-                            div(class="icon__wrap")
-                                i(class="additions__icon material-icons") tag_faces
-                            div(class="additions")
-                                div(class="additions__title") Комфорт
-                                div(class="additions__descr") Шумопоглощающие стены
-
-                        div(class="additions__wrapper")
-                            div(class="icon__wrap")
-                                i(class="additions__icon material-icons") location_city
-                            div(class="additions")
-                                div(class="additions__title") Удобство
-                                div(class="additions__descr") Окно в каждой из спален
+                        +additions('tag_faces', 'Комфорт', 'Шумопоглощающие стены')
+                        +additions('location_city', 'Удобство', 'Окно в каждой из спален')
 
             .form-elements.form-elements--middle
                 .form-elements-item
                     .form-elements__checkbox-wrapper
                         form(action="")
-                            .form-elements__descr
-                                span  Checkbox Buttons
+                            +formElementsHeader('Checkbox Buttons')
                             .checkboxs
-                                .form-elements__checkbox
-                                    .js-checkbox
-                                        div(class="checkbox__marks")
-                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-smoke")
-                                        label(for="checkbox-smoke" class="checkbox-descr") Можно курить
-                                            input(class="checkbox" type="checkbox" id="checkbox-smoke" data-type="smoke")
-                                .form-elements__checkbox
-                                    .js-checkbox
-                                        div(class="checkbox__marks")
-                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-nursling")
-                                        label(for="checkbox-nursling" class="checkbox-descr") Можно с питомцами
-                                            input(class="checkbox" type="checkbox" id="checkbox-nursling" data-type="nursling")
-                                .form-elements__checkbox
-                                    .js-checkbox
-                                        div(class="checkbox__marks checkbox__marks--long-text")
-                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-guests")
-                                        label(for="checkbox-guests" class="checkbox-descr") Можно пригласить гостей (до 10 человек)
-                                            input(class="checkbox" type="checkbox" id="checkbox-guests" data-type="guests")
-
+                                +checkbox('', 'mark-smoke', 'checkbox-smoke', 'Можно курить', 'checkbox-smoke', 'smoke')
+                                +checkbox('', 'mark-nursling', 'checkbox-nursling', 'Можно с питомцами', 'checkbox-nursling', 'nursling')
+                                +checkbox('checkbox__marks--long-text', 'mark-guests', 'checkbox-guests', 'Можно пригласить гостей (до 10 человек)', 'checkbox-guests', 'guests')
 
                 .form-elements-item
                     form(action="")
-                        .form-elements__descr
-                            span  Radio Buttons
+                        +formElementsHeader('Radio Buttons')
                         .form-elements__radio-wrapper
-                            .form-elements__radio
-                                label(for="male-btn" class="marker__descr marker__descr--female") Мужской
-                                    input(type="radio" class="gender-btn" id="male-btn" name="gender" checked)
-                                    div(class="radio__marker")
-                            .form-elements__radio
-                                label(for="female-btn" class="marker__descr marker__descr--male") Женский
-                                    input(type="radio" class="gender-btn" id="female-btn" name="gender")
-                                    div(class="radio__marker")
+                            +radioButton('male-btn', 'marker__descr--female', 'Мужской', 'male-btn', 'checked')
+                            +radioButton('female-btn', 'marker__descr--male', 'Женский', 'female-btn', '')
 
                 .form-elements-item
                     form(action="")
-                        .form-elements__descr
-                            span  Toggle
+                        +formElementsHeader('Toggle')
                         .form-elements__toggle-wrapper
-                            .form-elements__toggle
-                                label(for="toggle-btn--active" class="toggle__descr") Получать спецпредложения
-                                    input(type="checkbox" class="toggle-btn" id="toggle-btn--active" name="toggle" checked)
-                                    div(class="toggle__marker")
-                        .form-elements__toggle
-                                label(for="toggle-btn--disabled" class="toggle__descr") Получать спецпредложения
-                                    input(type="checkbox" class="toggle-btn" id="toggle-btn--disabled" name="toggle")
-                                    div(class="toggle__marker")
+                            +toggle('toggle-btn--active', 'Получать спецпредложения', 'toggle-btn--active', 'checked')
+                            +toggle('toggle-btn--disabled', 'Получать спецпредложения', 'toggle-btn--disabled', '')
 
                 .form-elements-item
                     form(action="")
-                        .form-elements__descr
-                            span  like button
+                        +formElementsHeader('like button')
                         .form-elements__like-wrapper
                             .form-elements__like
                                 div(class="like") 2
@@ -303,21 +216,22 @@ block form-section
 
                 .form-elements-item
                     form(action="")
-                        .form-elements__descr
-                            span  rate button
+                        +formElementsHeader('rate button')
                         .form-elements__rate-wrapper
-                            .form-elements__rate
-                                i(class="rating__icon") star
-                                i(class="rating__icon") star
-                                i(class="rating__icon") star
-                                i(class="rating__icon") star
-                                i(class="rating__icon") star_border
-                            .form-elements__rate.form-elements__rate--right
-                                i(class="rating__icon") star
-                                i(class="rating__icon") star
-                                i(class="rating__icon") star
-                                i(class="rating__icon") star
-                                i(class="rating__icon") star
+                            +rateButton('star', 'star_border')
+                            //- .form-elements__rate
+                            //-     i(class="rating__icon") star
+                            //-     i(class="rating__icon") star
+                            //-     i(class="rating__icon") star
+                            //-     i(class="rating__icon") star
+                            //-     i(class="rating__icon") star_border
+                            //- .form-elements__rate.form-elements__rate--right
+                            //-     i(class="rating__icon") star
+                            //-     i(class="rating__icon") star
+                            //-     i(class="rating__icon") star
+                            //-     i(class="rating__icon") star
+                            //-     i(class="rating__icon") star
+                            //- доделать рейтинг
 
                 .form-elements-item
                     .form-elements__dropdown
